--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Striving to make your next event one to remember." }}</h3>
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Save $100 on your next event!" }}</h3>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
